--- a/dawa.html
+++ b/dawa.html
@@ -179,13 +179,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<div class="ibvm ddtext"> Design &amp; Developed :</div>
 						<div class="ibvm ddlogo">
 							<a href="http://d-designstudio.com/" target="_blank">
-								<img src="images/ddesignlogo.png" alt="web design & seo company mumbai" title="web design & seo company mumbai">
+								<img src="images/ddesignlogo.png" alt="web design & seo company Siliguri" title="web design & seo company Siliguri">
 							</a>
 						</div>
 					</div>
 <!--
                     <p class="txt-simple"><span class="uppercase">The dawa company</span> <br>Unit no. B-21 2nd flr, Aristrocrate Bldg , Lajya Compound Mogra Pada,
-Old Nagardas Road, Andheri East, Mumbai 400069.</p>
+Old Nagardas Road, Andheri East, Siliguri 400069.</p>
 -->
                 </div>
                 <div class="right-payment">
